# JKit

./: .gitignore  Basic.py  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SUPPORT.md  __init__.py  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py  test.py  test_all.py  test_case.json  test_case_creater.py  test_cases.yaml
.github/workflows/: publish-to-pypi.yaml  static-check.yaml
JianshuResearchTools/: Basic.py  CODE_OF_CONDUCT.md  Errors.py  External.py  __init__.py  article.py  assert_func.py  assert_funcs.py  basic.py  basic_apis.py  beikeisland.py  collection.py  convert.py  errors.py  exceptions.py  external.py  headers.py  httpx_client.py  island.py  main.py  notebook.py  objects.py  oo.py  rank.py  user.py  utils.py
jianshu_apis/: .env.example  bruno.json  collection.bru  搜索.bru
jianshu_apis/environments/: main.bru
jianshu_apis/专题/: 获取专题信息.bru  获取专题关注者.bru  获取专题推荐作者.bru  获取专题文章.bru  获取专题编辑 - 关注者 - 推荐作者.bru  获取专题编辑.bru
jianshu_apis/会员/: 获取会员收益示例.bru
jianshu_apis/大转盘/: 获取大转盘中奖记录.bru
jianshu_apis/排行榜/: 获取文章收益排行榜.bru  获取日更排行榜.bru  获取用户收益排行榜.bru  获取资产排行榜.bru
jianshu_apis/推荐/: 获取推荐作者.bru  获取推荐出版作者.bru  获取推荐连载.bru  获取首页信息流推荐.bru
jianshu_apis/文章/: 获取作者推荐文章.bru  获取文章信息.bru  获取文章所属文集.bru  获取文章精选评论.bru  获取文章被收入的专题.bru  获取文章评论.bru  获取文章阅读量.bru  获取文章音频信息.bru  获取更多子评论.bru  获取阅读页侧边栏推荐文章.bru
jianshu_apis/文集/: 获取文集信息.bru  获取文集文章.bru
jianshu_apis/用户/: 获取用户专题.bru  获取用户信息.bru  获取用户关注的文集 - 连载 - 专题.bru  获取用户出版物.bru  获取用户动态.bru  获取用户头像.bru  获取用户文章.bru  获取用户文集 - 连载 - 专题.bru  获取用户文集与连载.bru  获取用户点赞的文章.bru  获取用户课程.bru
jianshu_apis/私有 - 资产/: 将简书贝转换为简书钻.bru  将简书钻转换为简书贝.bru  获取已失效的收益加成卡数据.bru  获取持钻奖励记录.bru  获取收益加成卡信息.bru  获取收益加成卡数据.bru  获取未生效的收益加成卡数据.bru  获取生效中的收益加成卡数据.bru  获取简书贝变动记录.bru  获取简书钻变动记录.bru
jianshu_apis/简书积分兑换平台/: 获取平台设置.bru  获取贝市买单挂单.bru  获取贝市卖单挂单.bru
jianshu_apis/连载/: 获取连载文章.bru
jkit/: __init__.py  _base.py  _constraints.py  _http_client.py  _network_request.py  _normalization.py  _resource_object_base.py  _utils.py  article.py  collection.py  config.py  constants.py  credential.py  exceptions.py  identifier_assert.py  identifier_check.py  identifier_convert.py  jianshu_lottery.py  lottery.py  notebook.py  user.py
jkit/data_objects/: _base.py  user.py
jkit/jpep/: ftn_macket.py  platform_settings.py
jkit/private/: assets.py
jkit/ranking/: article_earning.py  assets.py  daily_update.py  user_earning.py
