[tool.poetry]
name = "jkit"
version = "3.0.0a1"
description = "简书非官方 SDK - 创造可能性"
readme = "README.md"
license = "MIT"
authors = ["yezi <yehaowei20060411@qq.com>"]
repository = "https://github.com/FHU-yezi/JKit"
keywords = ["jianshu", "SDK"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = {extras = ["http2"], version = "0.*"}
msgspec = "0.*"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pyright = "^1.1.0"
codespell = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = [
    "A", "ANN", "ASYNC", "B", "BLE",
    "C4", "E", "F", "I", "ICN",
    "ISC", "N", "PIE", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "SLF",
    "TCH", "UP", "W"
]

ignore = ["ANN101", "ANN102", "ANN401", "BLE001", "RUF001", "RUF002", "RUF003", "SLF001"]

target-version = "py38"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["F401"]